--- a/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
+++ b/src/components/code/code-cpp/cpp-courses/pages/elem-2011.html
@@ -1602,7 +1602,7 @@ public:
     myNext = 0;
   }
 
-  void addValue(int value) {
+  virtual void addValue(int value) {
     List *current = this;
     while (current->myNext != 0) {
       current = current->myNext;
@@ -1639,7 +1639,7 @@ int main() {
 <pre>
 class DList: public List {
 private:
-  List *myPrev;
+  DList *myPrev;
 
 public:
   DList(int value): List(value) {
@@ -1699,4 +1699,27 @@ if (tmp == 1) {
 l->addValue(6);
 </pre>
   <p>На момент компиляции неизвестно какой будет объект - класса List или DList. Но потом у этого объекта все равно можно вызвать метод addValue, потому что это метод родительского класса Lis, а это значит, что он обязательно есть в дочернем классе DList</p>
+
+  <h4>Перекрытие (override)</h4>
+  <p>Если в классе-наследнике мы хотим переопределить функцию из родительского класса, то перед функцией в родительском классе должно стоять ключевое слово virtual. В этом случае функция в классе-наследнике перекрывает родительскую функцию. При этом сигнатуры обеих функций должны быть одинаковые.</p>
+
+  <h4>Связывание (binding) (статическое и динамическое)</h4>
+  <p>Связывание это сопоставление имени функции и адреса в памяти с кодом функции.</p>
+  <p>Статическое связывание происходит во время компиляции. На стадии линковки вместо имен функций подставляются их адреса.</p>
+  <p>После того как появилось наследование - все изменилось. На этапе компиляции невозможно определить какая функция вызовется - из родительского класса или из дочернего.</p>
+  <p>Динамическое связывание происходит во время выполнения программы. Ключевое слово virtual, стоящее перед объявлением функции, означает, что для этой функции нужно использовать динамическое свзывание. В этом есть полиморфизм.</p>
+</article>
+
+
+<!-- Урок 12 -->
+<article class="article">
+  <div class="anchor" id="p12"></div>
+  <h3>Урок 12 Связывание (binding) (статическое и динамическое)</h3>
+
+  <p>Если в классе есть виртуальная функция, то компилятор создает таблицу виртуальных функций.</p>
+  <p>Чисто виртуальная функция не имеет тела и приравнивается нулю. Она нужна для построения абстрактного класса. Абстрактный класс должен содержать хотя бы одну чисто виртуальную функцию. От абстрактного класса нельзя создать объект. Абстрактный класс нужен только для того чтобы от него наследовались другие классы. Он задает интерфейс, обязательный для реализации классами-наследниками.</p>
+  <p>Если в классе есть хотя бы одна виртуальная функция, то нужно делать виртуальный деструктор. Чтобы при удалении объекта производного класса, созданного как объект родительского класса, также вызывался деструктор и у него.</p>
+  <p>Если деструктор родительского класса не сделать виртуальным, то произойдет статическое связывание и при удалении объекта вызовется только деструктор родительского класса, а деструктор производного класса не вызовется.</p>
+  <code>Base *p = new Derived();</code>
+  <code>delete p;</code>
 </article>
