--- a/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
+++ b/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
@@ -8,22 +8,26 @@
 <article class="article">
   <h3>Содержание</h3>
 
-  <a href="#t1">Тема 1. Комбинаторика</a>
-  <ol>
-    <li><a href="#t1p1">Задача 1. Количество пятизначных чисел с цифрой 2</a></li>
-    <li><a href="#t1p2">Задача 2а. Количество способов нанять 1 преподавателя и 1 ассистента из 20 кандидатов</a></li>
-    <li><a href="#t1p3">Задача 2б. Количество способов нанять 2 преподавателей из 20 кандидатов</a></li>
-    <li><a href="#t1p4">Задача 2в. Количество способов нанять 2 преподавателей из n кандидатов</a></li>
-    <li><a href="#t1p5">Задача 2г. Количество способов нанять 3 преподавателей из n кандидатов</a></li>
-    <li><a href="#t1p6">Задача 2д. Количество способов нанять k преподавателей из n кандидатов</a></li>
-    <li><a href="#t1p7">Задача 3. Количество способов выйти m пассажирам на n остановках</a></li>
-    <li><a href="#t1p8">Задача 4. Количество способов собрать команду из 4 человек, хотя бы с одной девочкой</a></li>
-    <li><a href="#t1p9">Задача 5. Количество способов разбить 14 человек на пары</a></li>
-    <li><a href="#t1p10">Задача 6а. Найти сумму всех трехзначных чисел из цифр 1,2,3,4</a></li>
-    <li><a href="#t1p11">Задача 6а2. Найти сумму всех трехзначных чисел из цифр 1,2,3,4,5</a></li>
-    <li><a href="#t1p12">Задача 6б. Найти сумму всех семизначных чисел из перестановок цифр 1,...,7</a></li>
-  </ol>
-  <a href="#t2">Выводы</a>
+  <br><a href="#t1">Тема 1. Комбинаторика</a>
+  <br><a href="#t1p1">Задача 1. Количество пятизначных чисел с цифрой 2</a>
+  <br><a href="#t1p2">Задача 2а. Количество способов нанять 1 преподавателя и 1 ассистента из 20 кандидатов</a>
+  <br><a href="#t1p3">Задача 2б. Количество способов нанять 2 преподавателей из 20 кандидатов</a>
+  <br><a href="#t1p4">Задача 2в. Количество способов нанять 2 преподавателей из n кандидатов</a>
+  <br><a href="#t1p5">Задача 2г. Количество способов нанять 3 преподавателей из n кандидатов</a>
+  <br><a href="#t1p6">Задача 2д. Количество способов нанять k преподавателей из n кандидатов</a>
+  <br><a href="#t1p7">Задача 3. Количество способов выйти m пассажирам на n остановках</a>
+  <br><a href="#t1p8">Задача 4. Количество способов собрать команду из 4 человек, хотя бы с одной девочкой</a>
+  <br><a href="#t1p9">Задача 5. Количество способов разбить 14 человек на пары</a>
+  <br><a href="#t1p10">Задача 6а. Найти сумму всех трехзначных чисел из цифр 1,2,3,4</a>
+  <br><a href="#t1p11">Задача 6а2. Найти сумму всех трехзначных чисел из цифр 1,2,3,4,5</a>
+  <br><a href="#t1p12">Задача 6б. Найти сумму всех семизначных чисел из перестановок цифр 1,...,7</a>
+  <br><a href="#t1.p13">Выводы</a>
+  <p></p>
+  <br><a href="#t2">Тема 2. Двойной подсчет</a>
+  <br><a href="#t2p1">Задача 1. Пончики</a>
+  <br><a href="#t2i1">Идея 1</a>
+  <br><a href="#t2p2">Задача 2. Таблица</a>
+  <br><a href="#t2i2">Идея 2</a>
 
 </article>
 
@@ -265,7 +269,7 @@
 
 <!-- Выводы -->
 <article class="article">
-  <div class="anchor" id="t2"></div>
+  <div class="anchor" id="t1p13"></div>
   <h3>Выводы</h3>
 
   <p>Для решения задач можно применять четыре действия:</p>
@@ -287,4 +291,20 @@
       <p>Когда все варианты поделились на группы одинаковых с равным числом элементов в каждой группе</p>
     </li>
   </ol>
+</article>
+
+
+<!-- Тема 2. Двойной подсчет -->
+<article class="article">
+  <div class="anchor" id="t2"></div>
+  <h3>Тема 2. Двойной подсчет</h3>
+</article>
+
+
+<!-- Идея 2 -->
+<article class="article">
+  <div class="anchor" id="t2i2"></div>
+  <h3>Идея 2</h3>
+
+  <p>В задачах на таблицы часто нужно обратить внимание на общую сумму или количество элементов, которую можно посчитать двумя способами: по строкам и по столбцам.</p>
 </article>
