--- a/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
+++ b/src/components/alg/alg-conspect/courses/pages/elem-course-3.html
@@ -28,6 +28,8 @@
   <br><a href="#t2i1">Идея 1</a>
   <br><a href="#t2p2">Задача 2. Таблица</a>
   <br><a href="#t2i2">Идея 2</a>
+  <br><a href="#t2p3">Задача 3. Решение задач</a>
+  <br><a href="#t2p4">Задача 4. Таблица</a>
 
 </article>
 
@@ -298,6 +300,54 @@
 <article class="article">
   <div class="anchor" id="t2"></div>
   <h3>Тема 2. Двойной подсчет</h3>
+
+  <p>Двойной подсчет - это прием решения задач, при котором некоторая величина подсчитывается двумя разными способами.</p>
+  <p>Базовый минимум. Поймем принцип на простых задачах.</p>
+</article>
+
+
+<!-- Задача 1. Пончики -->
+<article class="article">
+  <div class="anchor" id="t2p1"></div>
+  <h3>Задача 1. Пончики</h3>
+
+  <p>У Даши, Ралины и Ани вместе 23 пончика. У Ани на 1 пончик больше, чем у Ралины, а у Даши на 2 пончика меньше, чем у Ралины. Сколько пончиков у каждого из друзей?</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Пусть у Ралины x пончиков. У Ани x+1 пончик. У Даши x-2 пончика. Итого x + (x+1) + (x-2). С другой стороны всего 23 пончика. Из этих двух подсчетов можно составить уравнение.</p>
+    <code>x + (x+1) + (x-2) = 23</code>
+    <p>Получим x = 8. Значит у Даши 6, у Ралины 8, у Ани 9 пончиков.</p>
+  </details>
+</article>
+
+
+<!-- Идея 1 -->
+<article class="article">
+  <div class="anchor" id="t2i1"></div>
+  <h3>Идея 1</h3>
+
+  <p>Ключевые шаги:</p>
+  <ol>
+    <li>Выделить величину, которую можно подсчитать двумя способами.</li>
+    <li>Записать выражения для каждого способа подсчета.</li>
+    <li>Приравнять их, обосновав, что это одна и та же величина.</li>
+    <li>Решить уравнение, сделать выводы.</li>
+  </ol>
+</article>
+
+
+<!-- Задача 2. Таблица -->
+<article class="article">
+  <div class="anchor" id="t2p2"></div>
+  <h3>Задача 2. Таблица</h3>
+
+  <p>В прямоугольной таблице 8 строк. Сумма чисел в каждой строке равна 15, а сумма чисел в каждом столбце равна 10. Сколько столбцов в таблице?</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Величина, к которой будет применен двойной подсчет, это сумма чисел в таблице. С одной стороны есть 8 строк и сумма в каждой строке равна 15, то есть сумма чисел в таблице равна 8 * 15 = 120. С другой стороны сумма чисел в каждом столбце равна 10, значит имеем 120 / 10 = 12 столбцов.</p>
+  </details>
 </article>
 
 
@@ -307,4 +357,34 @@
   <h3>Идея 2</h3>
 
   <p>В задачах на таблицы часто нужно обратить внимание на общую сумму или количество элементов, которую можно посчитать двумя способами: по строкам и по столбцам.</p>
+</article>
+
+
+<!-- Задача 3. Решение задач -->
+<article class="article">
+  <div class="anchor" id="t2p3"></div>
+  <h3>Задача 3. Решение задач</h3>
+
+  <p>Два юных математика из кружка Т-Поколение соревновались в решении 10 задач. Каждую задачу решил хотя бы один из них. За каждую задачу они набирали баллы по следующей системе:</p>
+  <ul>
+    <li>Если только один из них решил задачу, то решивший получает 4 балла, а не решивший - 1 балл</li>
+    <li>Если же оба решили задачу, то каждый получает по 2 балла.</li>
+  </ul>
+  <p>В сумме за все задачи они набрали 46 баллов. Сколько задач решили оба юных математика?</p>
+
+  <details>
+    <summary>Решение</summary>
+    <p>Величина, которую будем подсчитывать двумя способами, это общая сумма баллов. Пусть оба решили x задач. Если задачу решал один человек, то это давало 5 баллов в общую сумму, если задачу решали два человека, то это давало 4 балла в общую сумму. Составим уравнение</p>
+  </details>
+  <code>x * 4 + (10 - x) * 5 = 46</code>
+  <p>Получим x = 4.</p>
+</article>
+
+
+<!-- Задача 4. Таблица -->
+<article class="article">
+  <div class="anchor" id="t2p4"></div>
+  <h3>Задача 4. Таблица</h3>
+
+  <p>Можно ли в таблицу 5 * 5 записать числа 1,2,3...24 так, чтобы в каждой строке сумма нескольких записанных чисел была равна сумме остальных чисел этой строки?</p>
 </article>
